--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -360,11 +360,16 @@ body {
   min-height: 1000px;
 }
 #columns {
-  column-width: 320px;
+  background: #fefefe;
+  border: 2px solid #fcfcfc;
+  box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
+  text-align: center;
+  /*column-width: 320px;
   column-gap: 15px;
   width: 90%;
   max-width: 1100px;
   margin: 50px auto;
+  padding-top: 30px;*/
 
 }
 
@@ -412,10 +417,10 @@ div#columns:hover figure:not(:hover) {
   opacity: 0.4;
 }
 
-@media screen and (max-width: 750px) {
+/*@media screen and (max-width: 750px) {
   #columns { column-gap: 0px; }
   #columns figure { width: 100%; }
-}
+}*/
 
 .img{
     border-radius: 5px;
