--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -60,8 +60,8 @@
             $(document).ready(function() {
                 console.log('ready');
                 setTimeout(function() {
-                    $(".element0").typed({
-                        strings: ["DRAW SOME SHIT", "DRAW SOME POOP"],
+                    $(".element").typed({
+                        strings: ["DRAW SOME SHIT", "DRAW SOME POOP", "DRAW THEM, DRAW THEM YOU FOOL"],
                         typeSpeed: 30, // typing speed
                         backDelay: 750, // pause before backspacing
                         smartBackspace: true,
