--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,10 +16,10 @@
             <div class="b">b</div>
         </div>
         <div id="typedText">
-            <div class="element0 nodisplay"></div>
-            <div class="element1 nodisplay"></div>
+            <div class="element nodisplay"></div>
+            <!-- <div class="element1 nodisplay"></div>
             <div class="element2 nodisplay"></div>
-            <div class="element3 nodisplay"></div>
+            <div class="element3 nodisplay"></div> -->
         </div>
 
     </div>
